# fast-dex

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_ORDER.md  Dockerfile  EVM_BRIDGE_CONFIG.md  LICENSE  LINERA.md  LITEPAPER.md  MICRO_POOLS_ARCHITECTURE.md  README.md  clean-deploy.sh  compose.yaml  deploy-bridge-dex.bash  deploy-conway-fixed.bash  deploy-step1-publish-fungible.sh  deploy-step2-publish-native.sh  deploy-step3-create-tokens.sh  deploy-to-conway.bash  deploy-tokens.sh  netlify.toml  run.bash  rust-toolchain.toml  token_deployment.env  verify_tokens.sh
.cargo/: config.toml
abi/: Cargo.toml
abi/src/: lib.rs  random.rs  token_profile.rs
abi/tests/: calculate_hand_value_test.rs
bridge-tracker/: Cargo.toml
bridge-tracker/src/: contract.rs  lib.rs  service.rs  state.rs
dex/: Cargo.toml
dex/src/: contract.rs  lib.rs  service.rs  tests.rs
frontend-amm/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-amm/public/: config.json
frontend-amm/src/: App.css  App.tsx  TestingInterface.tsx  dynamic-signer.ts  index.css  linera-adapter.ts  linera-client.ts  main.tsx
frontend-amm/src/components/: DexInterface.tsx  FaucetTab.tsx  PoolsTab.tsx  SwapTab.tsx  TokensTab.tsx  WalletSidebar.tsx
frontend-amm/src/config/: tokens.ts
frontend-amm/src/hooks/: useBlockchainBalances.ts  useDex.ts  usePersistentBalances.ts  useRealTokens.ts
frontend-amm/src/lib/: dynamic-signer.ts
fungible/src/: contract.rs  lib.rs
native-fungible/src/: contract.rs
solidity-contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
solidity-contracts/contracts/: FastDEXBridge.sol
solidity-contracts/scripts/: deploy.js
