[package]
name = "abi"
version = "0.2.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
async-graphql-derive.workspace = true
linera-sdk.workspace = true
log.workspace = true
futures.workspace = true
getrandom.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }
