[package]
name = "dex"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
async-graphql-derive.workspace = true
linera-sdk = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "=0.15.11", features = ["test", "wasmer"] }

[dev-dependencies]
linera-sdk = { version = "=0.15.11", features = ["test"] }

[[bin]]
name = "dex_contract"
path = "src/contract.rs"

[[bin]]
name = "dex_service"
path = "src/service.rs"
